# couchbase-rs

./: Cargo.toml  README.md
.github/workflows/: CI.yml
couchstore/: Cargo.toml
couchstore/src/: btree.rs  btree_modify.rs  btree_read.rs  constants.rs  file_read.rs  file_write.rs  lib.rs  node_types.rs  save.rs  utils.rs
ep_engine/: Cargo.toml  README.md
ep_engine/src/: ep_bucket.rs  failover_table.rs  hash_table.rs  item.rs  kv_shard.rs  kv_store.rs  lib.rs  stored_value.rs  vbucket.rs  vbucket_map.rs  warmup.rs
ep_engine/test-data/travel-sample/: 1000.couch.1  1001.couch.1  1003.couch.1  1004.couch.1  1007.couch.1  1008.couch.1  1014.couch.1  1015.couch.1  102.couch.1  1020.couch.1  1023.couch.1  107.couch.1  108.couch.1  109.couch.1  111.couch.1  115.couch.1  117.couch.1  12.couch.1  121.couch.1  123.couch.1  125.couch.1  126.couch.1  127.couch.1  128.couch.1  13.couch.1  131.couch.1  133.couch.1  134.couch.1  135.couch.1  136.couch.1  137.couch.1  139.couch.1  14.couch.1  141.couch.1  144.couch.1  149.couch.1  150.couch.1  152.couch.1  153.couch.1  155.couch.1  (+430 more)
kv_engine/: Cargo.toml
kv_engine/src/: config.rs  connection.rs  lib.rs
kv_engine/src/operations/: cluster_config.rs  dcp.rs  get.rs  hello.rs  mod.rs  sasl_auth.rs  select_bucket.rs  set.rs
kv_engine/test/: go.mod  go.sum  main.go
memcached_codec/: Cargo.toml
memcached_codec/src/: cas.rs  codec.rs  data_type.rs  error.rs  feature.rs  lib.rs  magic.rs  message.rs  opcode.rs  status.rs
test-data/travel-sample/: 0.couch.1  1.couch.1  10.couch.1  100.couch.1  1002.couch.1  1005.couch.1  1006.couch.1  1009.couch.1  101.couch.1  1010.couch.1  1011.couch.1  1012.couch.1  1013.couch.1  1016.couch.1  1017.couch.1  1018.couch.1  1019.couch.1  1021.couch.1  1022.couch.1  103.couch.1  104.couch.1  105.couch.1  106.couch.1  11.couch.1  110.couch.1  112.couch.1  113.couch.1  114.couch.1  116.couch.1  118.couch.1  119.couch.1  120.couch.1  122.couch.1  124.couch.1  129.couch.1  130.couch.1  132.couch.1  138.couch.1  140.couch.1  142.couch.1  (+517 more)
