[package]
name = "couchstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bitflags = "2.4.0"
crc32c = "0.6.4"
crc32fast = "1.3.2"
hex = "0.4.3"
num_enum = "0.7.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
snap = "1.1.0"
