[package]
name = "ep_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.111"
couchstore = { path = "../couchstore" }
parking_lot = "0.12.1"
crossbeam-utils = "0.8.19"
dashmap = "5.5.3"
rand = "0.8.5"
byteorder = "1.5.0"
bitflags = "2.4.2"
crc32fast = "1.3.2"
memcached_codec = { path = "../memcached_codec" }
