[package]
name = "kv_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memcached_codec = { path = "../memcached_codec" }
tokio-util = { version = "0.7.8", features = ["codec"] }
bytes = "1.4.0"
tracing = "0.1.37"
crc32fast = "1.3.2"
couchstore = { path = "../couchstore" }
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.104"
maplit = "1.0.2"
bitflags = "2.3.3"
tracing-subscriber = "0.3"
