[package]
name = "kv_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memcached_codec = { path = "../memcached_codec" }
tokio-util = { version = "0.7.10", features = ["codec"] }
bytes = "1.5.0"
tracing = "0.1.40"
crc32fast = "1.4.0"
couchstore = { path = "../couchstore" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.111"
maplit = "1.0.2"
bitflags = "2.4.2"
tracing-subscriber = "0.3"
