[package]
name = "memcached_codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.0"
bytes = "1.5.0"
thiserror = "1.0.49"
tokio-util = { version = "0.7.9", features = ["codec"] }
num_enum = "0.7.0"
